--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,8 +9,11 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-}
-
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+  --accent-color: #FF0070;
+  --bg-color: #000028;
+  --subtitle-text-color: #000028;
+  --section-title-color: #FF0070;
+  --text-color: #F1B2CE;
+  --title-color: #DB00FF;
+  --bg-image: url(../images/cover-image-dark.png);
 }
