--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,36 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #FFC2E6;
+  --title-color: #FF8DCB;
+  --subtitle-text-color: #353430;
+  --section-title-color: #353430;
+  --bg-color: #FFF1F7;
+  --text-color: #353430;
+  --opaque-outline: #32312D66;
+  --bg-image: url(../images/cover-image-light.png)
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  .decoration-element {
+    display: none;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --accent-color: #FFC2E6;
+    --title-color: #FF8DCB;
+    --subtitle-text-color: #353430;
+    --section-title-color: #353430;
+    --bg-color: #FFF1F7;
+    --text-color: #353430;
+    --opaque-outline: #32312D66;
+    --bg-image: url(../images/cover-image-light.png)
+  }
+
+  .decoration-element {
+    display: none;
+  }
 }
