--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,353 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  font-family: var(--body-font);
+  background-image: var(--bg-image);
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-color: var(--bg-color);
+}
+
+.header {
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: center;
+  padding: var(--page-padding);
+  min-block-size: 668px;
+  block-size: 100vh;
+}
+
+.decorated-zone::before {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--section-title-color);
+  border-right: 1px solid var(--section-title-color);
+  top: 10px;
+  right: 10px;
+}
+
+.decorated-zone::after {
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--section-title-color);
+  border-left: 1px solid var(--section-title-color);
+  bottom: 10px;
+  left: 10px;
+}
+
+.decoration-element::before {
+  position: absolute;
+  top: 10px;
+  right: 38px;
+  content: "rec";
+  color: var(--accent-color);
+  text-transform: uppercase;
+  font-family: var(--body-font);
+  font-size: var(--section-title-size);
+}
+
+.decoration-element::after {
+  position: absolute;
+  top: 19px;
+  right: 19px;
+  content: "";
+  display: block;
+  border-radius: 50%;
+  inline-size: 0.5rem;
+  block-size: 0.5rem;
+  background: var(--accent-color);
+  box-shadow: 0 0 4px 2px var(--accent-color);
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  justify-self: flex-end;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  color: var(--section-title-color);
+  background-color: transparent;
+  border: none;
+  size: 18px;
+  font-weight: 400;
+  line-height: 18px;
+  text-transform: lowercase;
+  border: none;
+  padding: 2px 13px 4px;
+  text-align: center;
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--opaque-outline);
+}
+
+.header__theme-menu-button:focus {
+  outline: 0;
+  border-bottom: 1px solid;
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: 1px solid var(--section-title-color);
+}
+
+.header__title {
+  text-shadow: 4px 4px 0 var(--accent-color);
+  line-height: 95.7px;
+}
+
+.title {
+  color: var(--title-color);
+  font-size: var(--title-font-size);
+}
+
+.title-decor {
+  background-color: var(--accent-color);
+  color: var(--subtitle-text-color);
+  margin-block-end: 10px;
+}
+
+.header__subtitle {
+  font-size: var(--section-title-size);
+  margin-block-end: 31px;
+}
+
+.section {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding-inline-start: 10px;
+  padding-inline-end: 10px;
+}
+
+.section__title {
+  color: var(--section-title-color);
+  font-size: var(--section-title-size);
+  padding-block-end: 10px;
+}
+
+.section__text {
+  color: var(--text-color);
+  padding-block-end: 10px;
+}
+
+.section__link {
+  text-decoration: none;
+  text-shadow: 2px 2px var(--accent-color);
+}
+
+.section__link:focus {
+  outline: none;
+}
+
+.section__link:focus-visible {
+  outline: 1px solid var(--text-color);
+}
+
+.section__link:hover {
+  text-decoration: underline solid var(--text-color);
+  text-underline-offset: 2px;
+}
+
+.section__gallery {
+  display: grid;
+  gap: 10px;
+  padding-inline-start: 10px;
+  padding-inline-end: 10px;
+  margin-block-end: 40px;
+}
+
+.gallery-image {
+  width: 100%;
+}
+
+.footer {
+  position: relative;
+  display: grid;
+  min-block-size: 668px;
+  justify-items: center;
+  align-items: center;
+  block-size: 100vh;
+}
+
+.footer__text {
+  font-weight: 700;
+  justify-self: center;
+  align-self: center;
+  text-shadow: 2px 2px var(--accent-color);
+}
+
+@media (width >= 768px) {
+  :root {
+    --page-padding: 20px;
+  }
+
+  .page {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+
+  .decorated-zone::before {
+    top: 20px;
+    right: 20px;
+  }
+
+  .decorated-zone::after {
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .decoration-element::before {
+    top: 20px;
+    right: 48px;
+  }
+
+  .decoration-element::after {
+    top: 29px;
+    right: 29px;
+  }
+
+  .header {
+    grid-template-columns: 1fr 1fr;
+    padding: var(--page-padding);
+    margin-block-end: 60px;
+    min-block-size: 768px;
+    block-size: 100vh;
+  }
+
+  .header__title {
+    grid-column: span 2;
+  }
+
+  .title {
+    line-height: 99px;
+    --title-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__theme-menu {
+    grid-column: 2;
+  }
+
+  .header__subtitle {
+    grid-column: 2;
+  }
+
+  .section {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    padding-inline-start: var(--page-padding);
+    padding-inline-end: var(--page-padding);
+    margin-block-end: 80px;
+  }
+
+  .section__title {
+    display: grid;
+    grid-column: 1;
+  }
+
+  .section__content {
+    grid-column: 2;
+  }
+
+  .section__span {
+    grid-column: span 2;
+  }
+
+  .section__gallery {
+    display: grid;
+    margin-block-end: 60px;
+    padding-inline-start: var(--page-padding);
+    padding-inline-end: var(--page-padding);
+  }
+
+  .gallery .title-decor {
+    grid-column: span 2;
+  }
+
+  .gallery__content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    gap: 20px;
+    grid-auto-flow: dense;
+  }
+
+  .gallery-image{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .gallery__item:nth-child(1) {
+    grid-column: span 2;
+  }
+
+  .gallery__item:nth-child(2) {
+    grid-row: span 2;
+  }
+
+  .gallery__item:nth-child(3) {
+    grid-row: span 2;
+  }
+
+  .gallery__item:nth-child(5) {
+    grid-column: span 2;
+  }
+
+  .footer {
+    min-block-size: 1024px;
+    block-size: 100vh;
+  }
+}
+
+@media (width >= 1024px) {
+  .header {
+    min-block-size: 768px;
+    block-size: 100vh;
+    margin-block-end: 40px;
+  }
+
+  .header__theme-menu {
+    grid-column: span 2;
+    justify-self: center;
+    align-self: flex-start;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .section__content {
+    grid-column: span 2;
+  }
+
+  .section__span {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column: span 3;
+    gap: 20px;
+  }
+  
+  .footer {
+    min-block-size: 768px;
+    block-size: 100vh;
+  }
 }
