--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,17 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --accent-color: #FF0070;
+  --bg-color: #000028;
+  --subtitle-text-color: #000028;
+  --section-title-color: #FF0070;
+  --text-color: #F1B2CE;
+  --title-color: #DB00FF;
+  --opaque-outline: #FF007066;
+  --bg-image: url(../images/cover-image-dark.png);
+  --body-font: IBM Plex Mono;
+  --title-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --section-title-size: 18px;
+  --page-padding: 10px;
+}
