--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@
   padding: var(--page-padding);
   min-block-size: 668px;
   block-size: 100vh;
+  margin-block-end: 40px;
 }
 
 .decorated-zone::before {
@@ -81,7 +82,6 @@
   font-weight: 400;
   line-height: 18px;
   text-transform: lowercase;
-  border: none;
   padding: 2px 13px 4px;
   text-align: center;
 }
@@ -117,11 +117,11 @@
   background-color: var(--accent-color);
   color: var(--subtitle-text-color);
   margin-block-end: 10px;
+  line-height: 23.4px;
 }
 
 .header__subtitle {
   font-size: var(--section-title-size);
-  margin-block-end: 31px;
 }
 
 .section {
@@ -129,16 +129,19 @@
   grid-template-columns: 1fr;
   padding-inline-start: 10px;
   padding-inline-end: 10px;
+  margin-block-end: 50px;
 }
 
 .section__title {
   color: var(--section-title-color);
   font-size: var(--section-title-size);
   padding-block-end: 10px;
+  line-height: 23.4px;
 }
 
 .section__text {
   color: var(--text-color);
+  line-height: 23.4px;
   padding-block-end: 10px;
 }
 
@@ -166,6 +169,11 @@
   padding-inline-start: 10px;
   padding-inline-end: 10px;
   margin-block-end: 40px;
+}
+
+.gallery__content {
+  display: grid;
+  gap: 10px;
 }
 
 .gallery-image {
@@ -285,7 +293,7 @@
     grid-auto-flow: dense;
   }
 
-  .gallery-image{
+  .gallery-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
