--- a/styles/light.css
+++ b/styles/light.css
@@ -9,8 +9,8 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --accent-color: #FFC2E6;
-  --title-color: #FF8DCB;
+  --accent-color: #FF8DCB;
+  --title-color: #FFC2E6;
   --subtitle-text-color: #353430;
   --section-title-color: #353430;
   --bg-color: #FFF1F7;
@@ -28,8 +28,8 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    --accent-color: #FFC2E6;
-    --title-color: #FF8DCB;
+    --accent-color: #FF8DCB;
+    --title-color: #FFC2E6;
     --subtitle-text-color: #353430;
     --section-title-color: #353430;
     --bg-color: #FFF1F7;
