--- a/styles/style.css
+++ b/styles/style.css
@@ -270,12 +270,14 @@
     grid-template-columns: 1fr 2fr;
     padding-inline-start: var(--page-padding);
     padding-inline-end: var(--page-padding);
+    gap: 20px;
     margin-block-end: 80px;
   }
 
   .section__title {
     display: grid;
     grid-column: 1;
+    margin-block-end: 0;
   }
 
   .section__content {
@@ -338,7 +340,7 @@
   .header {
     min-block-size: 768px;
     block-size: 100vh;
-    margin-block-end: 40px;
+    margin-block-end: 60px;
   }
 
   .header__theme-menu {
@@ -354,6 +356,7 @@
   .section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
   }
 
   .section__content {
