--- a/styles/style.css
+++ b/styles/style.css
@@ -89,6 +89,7 @@
 
 .header__theme-menu-button_active {
   pointer-events: none;
+  border: 1px solid var(--section-title-color);
 }
 
 .header__theme-menu-button:hover {
@@ -101,7 +102,7 @@
 }
 
 .header__theme-menu-button:focus-visible {
-  outline: 1px solid var(--section-title-color);
+  border-bottom: 1px solid var(--section-title-color);
 }
 
 .header__title {
@@ -123,7 +124,7 @@
 }
 
 .title-decor__margin {
-  margin-block-end: 20px;
+  margin-block-end: 0;
 }
 
 .header__subtitle {
@@ -150,11 +151,12 @@
   color: var(--text-color);
   font-size: var(--section-title-size);
   line-height: 23.4px;
-  margin-block-end: 20px;
+
 }
 
-.last-text {
-  margin-block-end: 0;
+.section__content {
+  display: grid;
+  gap: 20px;
 }
 
 .section__link {
@@ -171,8 +173,7 @@
 }
 
 .section__link:hover {
-  text-decoration: underline solid var(--text-color);
-  text-underline-offset: 2px;
+  border-bottom: 1px solid var(--text-color);
 }
 
 .section__gallery {
@@ -210,13 +211,6 @@
 @media (width >= 768px) {
   :root {
     --page-padding: 20px;
-  }
-
-  .page {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
   }
 
   .decorated-zone::before {
@@ -266,7 +260,6 @@
   }
 
   .section {
-    display: grid;
     grid-template-columns: 1fr 2fr;
     padding-inline-start: var(--page-padding);
     padding-inline-end: var(--page-padding);
@@ -289,10 +282,9 @@
   }
 
   .section__gallery {
-    display: grid;
-    margin-block-end: 60px;
     padding-inline-start: var(--page-padding);
     padding-inline-end: var(--page-padding);
+    margin-block-end: 60px;
   }
 
   .section__gallery .title-decor {
@@ -300,7 +292,6 @@
   }
 
   .gallery__content {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
     gap: 20px;
@@ -308,7 +299,6 @@
   }
 
   .gallery-image {
-    width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
@@ -354,7 +344,6 @@
   }
 
   .section {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
   }
